--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "",
   "license": "ISC",
-  "homepage": "https://github.com/anthms/private-npm-package#readme"
+  "homepage": "https://github.com/anthms/private-npm-package#readme",
   "dependencies": {
     "myrepo": "anthms/private-npm-package"
   }
