--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "license": "ISC",
   "homepage": "https://github.com/anthms/private-npm-package#readme",
   "dependencies": {
-    "myrepo": "anthms/private-npm-package"
+    "myrepo": "anthms/private-npm-package#main"
   }
 }
