--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@v2
         with:
-          node-version: 20.x
+          node-version: '16'
       - run: |
-          git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf ssh://git@github.com/
+          git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+          git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "git@github.com:"
+          git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "ssh://git@github.com/"
       - run: npm install
